--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "blueimp-md5": "^2.12.0",
     "core-js": "^2.6.5",
     "element-ui": "^2.12.0",
+    "ly-tab": "^2.1.2",
     "vue": "^2.6.10",
     "vue-awesome-swiper": "^3.1.3",
     "vue-router": "^3.1.3",
